--- a/.github/workflows/_binary-build-linux.yml
+++ b/.github/workflows/_binary-build-linux.yml
@@ -257,13 +257,13 @@ jobs:
           # Ensure the working directory gets chowned back to the current user
           docker run --rm -v "${RUNNER_TEMP}/artifacts:/v" -w /v "${ALPINE_IMAGE}" chown -R "$(id -u):$(id -g)" .
 
-      # - uses: actions/upload-artifact@v4.4.0
-      #   if: ${{ steps.filter.outputs.is-test-matrix-empty == 'False' }}
-      #   with:
-      #     name: ${{ inputs.build_name }}
-      #     if-no-files-found: error
-      #     path:
-      #       ${{ runner.temp }}/artifacts/*
+      - uses: actions/upload-artifact@v4.4.0
+        if: ${{ steps.filter.outputs.is-test-matrix-empty == 'False' }}
+        with:
+          name: ${{ inputs.build_name }}
+          if-no-files-found: error
+          path:
+            ${{ runner.temp }}/artifacts/*
 
       - name: Teardown Linux
         if: always() && inputs.build_environment != 'linux-s390x-binary-manywheel'
