--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -26,17 +26,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # get-label-type:
-  #   name: get-label-type
-  #   uses: ./.github/workflows/_runner-determinator.yml
-  #   with:
-  #     triggering_actor: ${{ github.triggering_actor }}
-  #     issue_owner: ${{ github.event.pull_request.user.login || github.event.issue.user.login }}
-  #     curr_branch: ${{ github.head_ref || github.ref_name }}
-  #     curr_ref_type: ${{ github.ref_type }}
   manywheel-py3_12-cuda12_8-build:
     uses: ./.github/workflows/_binary-build-linux.yml
-    # needs: get-label-type
     with:
       PYTORCH_ROOT: /pytorch
       PACKAGE_TYPE: manywheel
@@ -49,7 +40,7 @@ jobs:
       DESIRED_DEVTOOLSET: cxx11-abi
       use_split_build: False
       DESIRED_PYTHON: "3.12"
-      # runner_prefix: "${{ needs.get-label-type.outputs.label-type }}"
+      runner_prefix: "${{ needs.get-label-type.outputs.label-type }}"
       build_name: manywheel-py3_12-cuda12_8
       build_environment: linux-binary-manywheel
       PYTORCH_EXTRA_INSTALL_REQUIREMENTS: nvidia-cuda-nvrtc-cu12==12.8.61; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cuda-runtime-cu12==12.8.57; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cuda-cupti-cu12==12.8.57; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cudnn-cu12==9.7.1.26; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cublas-cu12==12.8.3.14; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cufft-cu12==11.3.3.41; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-curand-cu12==10.3.9.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusolver-cu12==11.7.2.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusparse-cu12==12.5.7.53; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusparselt-cu12==0.6.3; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nccl-cu12==2.21.5; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nvtx-cu12==12.8.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nvjitlink-cu12==12.8.61; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cufile-cu12==1.13.0.11; platform_system == 'Linux' and platform_machine == 'x86_64'
@@ -58,7 +49,6 @@ jobs:
   manywheel-py3_12-cuda12_8-test:  # Testing
     needs:
       - manywheel-py3_12-cuda12_8-build
-      # - get-label-type
     uses: ./.github/workflows/_binary-test-linux.yml
     with:
       PYTORCH_ROOT: /pytorch
@@ -78,25 +68,22 @@ jobs:
       runs_on: linux.4xlarge.nvidia.gpu
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
-  # manywheel-py3_12-cuda12_8-upload:  # Uploading
-  #   if: ${{ github.repository_owner == 'pytorch' }}
-  #   permissions:
-  #     id-token: write
-  #     contents: read
-  #   needs: manywheel-py3_12-cuda12_8-test
-  #   with:
-  #     PYTORCH_ROOT: /pytorch
-  #     PACKAGE_TYPE: manywheel
-  #     # TODO: This is a legacy variable that we eventually want to get rid of in
-  #     #       favor of GPU_ARCH_VERSION
-  #     DESIRED_CUDA: cu128
-  #     GPU_ARCH_VERSION: 12.8
-  #     GPU_ARCH_TYPE: cuda
-  #     DOCKER_IMAGE: pytorch/manylinux2_28-builder:cuda12.8-main
-  #     DESIRED_DEVTOOLSET: cxx11-abi
-  #     use_split_build: False
-  #     DESIRED_PYTHON: "3.12"
-  #     build_name: manywheel-py3_12-cuda12_8
-  #   secrets:
-  #     github-token: ${{ secrets.GITHUB_TOKEN }}
-  #   uses: ./.github/workflows/_binary-upload.yml
+    steps:
+      - name: Download Build Artifacts
+      id: download-artifacts
+      uses: actions/download-artifact@v4.1.7
+      with:
+        name: manywheel-py3_12-cuda12_8
+        path: "${{ runner.temp }}/artifacts/"
+      - name: install gemfury CLI
+      run: |
+        echo "deb [trusted=yes] https://apt.fury.io/cli/ * *" | sudo tee /etc/apt/sources.list.d/fury-cli.list
+        sudo apt-get update
+        sudo apt-get install fury-cli
+      shell: bash
+      - name: print ls of artifacts
+      run: ls ${{ runner.temp }}/artifacts
+      shell: bash
+      - name: push wheel to gemfury
+      run: fury push "${{ runner.temp }}/artifacts/$(ls ${{ runner.temp }}/artifacts -1)" --api-token ${{ secrets.GEMFURY_FULL_TOKEN }}
+      shell: bash
