Upload to gemfury job

--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -69,6 +69,7 @@ jobs:
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
   upload-to-gemfury:
+    runs-on: ubuntu-22.04
     steps:
       - name: Download Build Artifacts
       id: download-artifacts
