--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -8,7 +8,9 @@ name: linux-binary-manywheel
 on:
   push:
   workflow_dispatch:
-
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
 env:
   # Needed for conda builds
   ALPINE_IMAGE: "alpine"
