Remove crons and build extras

--- a/.github/workflows/close-nonexistent-disable-issues.yml
+++ b/.github/workflows/close-nonexistent-disable-issues.yml
@@ -1,8 +1,8 @@
 name: Close nonexistent disable issues
 
 on:
-  schedule:
-    - cron: 5 22 * * 5  # this should be about 3PM PT on Friday
+  # schedule:
+  #   - cron: 5 22 * * 5  # this should be about 3PM PT on Friday
 
 jobs:
   close-nonexistent-disable-issues:
