--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -10,7 +10,7 @@ on:
       - release/*
     tags:
       - ciflow/slow/*
-  schedule:
+  # schedule:
     - cron: 29 8 * * *  # about 1:29am PDT, for mem leak check and rerun disabled tests
   workflow_dispatch:
 
