--- a/.github/workflows/slow.yml
+++ b/.github/workflows/slow.yml
@@ -11,7 +11,7 @@ on:
     tags:
       - ciflow/slow/*
   # schedule:
-    - cron: 29 8 * * *  # about 1:29am PDT, for mem leak check and rerun disabled tests
+    # - cron: 29 8 * * *  # about 1:29am PDT, for mem leak check and rerun disabled tests
   workflow_dispatch:
 
 concurrency:
