Disable two more workflows

--- a/.github/workflows/close-nonexistent-disable-issues.yml
+++ b/.github/workflows/close-nonexistent-disable-issues.yml
@@ -1,6 +1,7 @@
 name: Close nonexistent disable issues
 
 on:
+  workflow_dispatch:
   # schedule:
   #   - cron: 5 22 * * 5  # this should be about 3PM PT on Friday
 
