--- a/.github/workflows/upload-test-stats-while-running.yml
+++ b/.github/workflows/upload-test-stats-while-running.yml
@@ -1,6 +1,7 @@
 name: Upload test stats while running
 
-# on:
+on:
+  workflow_dispatch:
 #   schedule:
 #     # Every hour
 #     - cron: '0 * * * *'
