--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -49,7 +49,7 @@ jobs:
       PYTORCH_EXTRA_INSTALL_REQUIREMENTS: nvidia-cuda-nvrtc-cu12==12.8.61; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cuda-runtime-cu12==12.8.57; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cuda-cupti-cu12==12.8.57; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cudnn-cu12==9.7.1.26; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cublas-cu12==12.8.3.14; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cufft-cu12==11.3.3.41; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-curand-cu12==10.3.9.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusolver-cu12==11.7.2.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusparse-cu12==12.5.7.53; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cusparselt-cu12==0.6.3; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nccl-cu12==2.21.5; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nvtx-cu12==12.8.55; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-nvjitlink-cu12==12.8.61; platform_system == 'Linux' and platform_machine == 'x86_64' | nvidia-cufile-cu12==1.13.0.11; platform_system == 'Linux' and platform_machine == 'x86_64'
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
-  upload-to-gemfury:
+  upload-to-qcog-public-pypi:
     needs:
       - manywheel-py3_12-cuda12_8-build
     runs-on: ubuntu-22.04
@@ -65,9 +65,13 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::885886606610:role/GithubFullS3
           aws-region: "us-east-1"
-      - name: print ls of artifacts
-        run: ls ${{ runner.temp }}/artifacts
-        shell: bash
-      - name: upload a test file so that we know if it is working before building
+      - name: download and modify the index.html for the new version we are about to push
         run: |
-          aws s3 cp "${{ runner.temp }}/artifacts/*" s3://qcog-public-d980auw/simple/torch/ --acl public-read
+          aws s3 cp s3://qcog-public-pypi/torch/index.html "${{ runner.temp }}/artifacts/index.html"
+          WHEEL_NAME=$(ls ${{ runner.temp }}/artifacts/*.whl | xargs basename | sed 's/\.whl$//')
+          sed -i "/<\/body>/i <a href=\"${WHEEL_NAME}.whl\">${WHEEL_NAME}</a><br\/>" "${{ runner.temp }}/artifacts/index.html"
+          cat "${{ runner.temp }}/artifacts/index.html"
+        shell: bash
+      - name: upload our artifact and index.html
+        run: |
+          aws s3 cp "${{ runner.temp }}/artifacts/" s3://qcog-public-pypi/torch/ --acl public-read --recursive
